# diamond-prompt-runner

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  TODO.md  eslint.config.js  index.html  migrate.rs  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.agents/: AGENTS.md  settings.json  tasks.json
.claude/: settings.local.json
docs/: payload-compilation-flow.md
implementation-plans/: 01-PLAN-migration-setup.md  02-PLAN-specv1-to-specv2.md  03-PLAN-app-bootstrap-and-shell.md  04-PLAN-agent-tooling-and-workflows.md  05-PLAN-reach-milestone-1-read-and-navigate-ide-shell.md  06-REFERENCE-milestone-1-manual-test.md  07-PLAN-editing-slice.md  08-PLAN-rendering-and-validation-slice.md  09-PLAN-single-block-execution-slice.md  10-PLAN-pipeline-runner-slice.md  11-PLAN-run-history-slice.md  12-PLAN-pipeline-authoring-slice.md  13-PLAN-export-bundle-slice.md  14-PLAN-online-research-slice.md  15-PLAN-usage-metrics-slice.md  16-PLAN-variable-assignment-ui.md  17-PLAN-workspace-shell-restructure.md  18-PLAN-settings-and-model-presets.md  19-PLAN-output-target-and-json-slimdown.md  20-PLAN-API Key UX & Output Strategy Label.md  21-PLAN-asset-lifecycle-management.md  22-PLAN-ux-overhaul-sidebar-streaming-help.md  23-PLAN-code-audit.md  23-code-audit.md  24-AUDIT-css-audit-report.md  25-PLAN-add-code-editor.md  26-PLAN-add-CodeMirror-6.md  27-PLAN-batch-execution-and-tera-filters.md  28-PLAN-live-events-resume-stop.md  29-PLAN-duplicate-project-pipelines  30-PLAN-ephemeral-pipeline-block.md  31-MEMO-content-gating.md  32-PLAN-workspace-shell-simplification.md  README.md
prototypes/: PROTOTYPES_LIST.md
scripts/: README.md  generate-updater-json.mjs  normalize-markdown-boundaries.mjs  probe-openrouter-online.mjs  tauri-before-dev.mjs  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  project_store.rs  types.rs
src-tauri/src/project_store/: assets.rs  credentials.rs  execution.rs  history.rs  presets.rs  variables.rs
(+178 files in other folders)
